[gd_scene load_steps=23 format=3 uid="uid://b5m7cjrvxyv38"]

[ext_resource type="Texture2D" uid="uid://dfogjbb5eboh" path="res://sprites/jubarte1.png" id="1_ijn1w"]
[ext_resource type="Script" path="res://scripts/ocean.gd" id="1_shac2"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_0uqq0"]
[ext_resource type="Texture2D" uid="uid://ba2nwe84a3yh3" path="res://sprites/fundo1.png" id="2_p7p1o"]
[ext_resource type="Texture2D" uid="uid://dcw3wvm6duf46" path="res://sprites/jubarte2.png" id="2_t8vyn"]
[ext_resource type="Texture2D" uid="uid://crm7888565kxg" path="res://sprites/jubarteboca1.png" id="4_tkkna"]
[ext_resource type="Texture2D" uid="uid://bhw75wworeumx" path="res://sprites/jubarteboca2.png" id="5_ekeg0"]
[ext_resource type="Texture2D" uid="uid://qprk6wgmpn3b" path="res://sprites/seahorse1.png" id="5_mk8ne"]
[ext_resource type="Texture2D" uid="uid://cbk7jkr1ntytr" path="res://sprites/peixe1.png" id="6_xfldy"]
[ext_resource type="Texture2D" uid="uid://ctmfnxn5yeegg" path="res://sprites/peixe2.png" id="7_merca"]
[ext_resource type="AudioStream" uid="uid://bkqmr25nlucmq" path="res://audio/whip-02-242215.mp3" id="8_2435a"]
[ext_resource type="Script" path="res://scripts/peixe_2.gd" id="8_kqtj2"]
[ext_resource type="Texture2D" uid="uid://dwiao51h1bw57" path="res://sprites/peixe3.png" id="8_wjm1k"]
[ext_resource type="AudioStream" uid="uid://cnu75wrb4nr52" path="res://audio/whale-song-382729.mp3" id="11_73rcm"]
[ext_resource type="AudioStream" uid="uid://crrmqoojw0jox" path="res://audio/ALRM.ogg" id="15_7vyg6"]
[ext_resource type="Script" path="res://scripts/player_2.gd" id="17_cb3n1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wippu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ijn1w")
}, {
"duration": 1.0,
"texture": ExtResource("2_t8vyn")
}, {
"duration": 1.0,
"texture": ExtResource("4_tkkna")
}, {
"duration": 1.0,
"texture": ExtResource("5_ekeg0")
}, {
"duration": 1.0,
"texture": ExtResource("4_tkkna")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2xhg"]
radius = 22.0
height = 68.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_trj7f"]
a = Vector2(-34, -175)
b = Vector2(-35, 119)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8jtg"]
size = Vector2(23, 13)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_51cuc"]
a = Vector2(-404, 4)
b = Vector2(746, 7)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_18d56"]
a = Vector2(-5, 373)
b = Vector2(1169, 374)

[node name="Ocean" type="Node2D"]
script = ExtResource("1_shac2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(577, 325)
scale = Vector2(1.00174, 1.00309)
texture = ExtResource("2_p7p1o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(633, -14.5)
scale = Vector2(4.375, 3.51953)
sprite_frames = SubResource("SpriteFrames_wippu")
frame_progress = 0.470515
metadata/_edit_lock_ = true

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(554, 436)
script = ExtResource("2_0uqq0")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(9, -5)
shape = SubResource("CapsuleShape2D_g2xhg")
metadata/_edit_lock_ = true

[node name="Seahorse" type="Sprite2D" parent="Player"]
texture = ExtResource("5_mk8ne")
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(35, 532)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_trj7f")
metadata/_edit_lock_ = true

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(1189, 532)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource("SegmentShape2D_trj7f")
metadata/_edit_lock_ = true

[node name="Peixe2" type="CharacterBody2D" parent="."]
position = Vector2(361, 690)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe2"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe2"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe2/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe2"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe2"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe3" type="CharacterBody2D" parent="."]
position = Vector2(563, 825)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe3"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("6_xfldy")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe3"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe3/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe3"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe3"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe4" type="CharacterBody2D" parent="."]
position = Vector2(779, 923)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe4"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("8_wjm1k")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe4"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe4/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe4"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe4"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe5" type="CharacterBody2D" parent="."]
position = Vector2(620, 1044)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe5"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe5"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe5/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe5"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe5"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe6" type="CharacterBody2D" parent="."]
position = Vector2(436, 1202)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe6"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("6_xfldy")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe6"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe6/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe6"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe6"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe7" type="CharacterBody2D" parent="."]
position = Vector2(237, 1358)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe7"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("8_wjm1k")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe7"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe7/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe7"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe7"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe8" type="CharacterBody2D" parent="."]
position = Vector2(757, 1672)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe8"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe8"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe8/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe8"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe8"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe9" type="CharacterBody2D" parent="."]
position = Vector2(970, 1864)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe9"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("6_xfldy")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe9"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe9/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe9"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe9"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe10" type="CharacterBody2D" parent="."]
position = Vector2(621, 2070)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe10"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("8_wjm1k")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe10"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe10/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe10"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe10"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe11" type="CharacterBody2D" parent="."]
position = Vector2(70, 2353)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe11"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe11"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe11/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe11"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe11"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Player2" type="CharacterBody2D" parent="."]
visible = false
script = ExtResource("17_cb3n1")
metadata/_edit_lock_ = true

[node name="Area2D2" type="Area2D" parent="Player2"]
position = Vector2(406, 370)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2/Area2D2"]
shape = SubResource("SegmentShape2D_51cuc")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
shape = SubResource("SegmentShape2D_18d56")
metadata/_edit_lock_ = true

[node name="Peixe12" type="CharacterBody2D" parent="."]
position = Vector2(500, 2619)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe12"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe12"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe12/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe12"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe12"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe13" type="CharacterBody2D" parent="."]
position = Vector2(848, 2981)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe13"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe13"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe13/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe13"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe13"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe14" type="CharacterBody2D" parent="."]
position = Vector2(661, 3422)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe14"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe14"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe14/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe14"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe14"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe15" type="CharacterBody2D" parent="."]
position = Vector2(1027, 3819)
script = ExtResource("8_kqtj2")

[node name="Sprite2D" type="Sprite2D" parent="Peixe15"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe15"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe15/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe15"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe15"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe16" type="CharacterBody2D" parent="."]
position = Vector2(538, 4207)
script = ExtResource("8_kqtj2")

[node name="Sprite2D" type="Sprite2D" parent="Peixe16"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe16"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe16/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe16"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe16"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe17" type="CharacterBody2D" parent="."]
position = Vector2(867, 4677)
script = ExtResource("8_kqtj2")

[node name="Sprite2D" type="Sprite2D" parent="Peixe17"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe17"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe17/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe17"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe17"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe18" type="CharacterBody2D" parent="."]
position = Vector2(1215, 5117)
script = ExtResource("8_kqtj2")

[node name="Sprite2D" type="Sprite2D" parent="Peixe18"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe18"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe18/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe18"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe18"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe19" type="CharacterBody2D" parent="."]
position = Vector2(961, 5471)
script = ExtResource("8_kqtj2")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Peixe19"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe19"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe19/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe19"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe19"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="AudioAlarme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_7vyg6")
volume_db = -6.438
autoplay = true
metadata/_edit_lock_ = true

[node name="Peixe20" type="CharacterBody2D" parent="."]
position = Vector2(105, 5767)
script = ExtResource("8_kqtj2")

[node name="Sprite2D" type="Sprite2D" parent="Peixe20"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe20"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe20/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe20"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe20"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe21" type="CharacterBody2D" parent="."]
position = Vector2(1281, 5815)
script = ExtResource("8_kqtj2")

[node name="Sprite2D" type="Sprite2D" parent="Peixe21"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe21"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe21/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe21"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe21"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe22" type="CharacterBody2D" parent="."]
position = Vector2(1137, 6303)
script = ExtResource("8_kqtj2")

[node name="Sprite2D" type="Sprite2D" parent="Peixe22"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe22"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe22/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe22"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe22"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe23" type="CharacterBody2D" parent="."]
position = Vector2(465, 5519)
script = ExtResource("8_kqtj2")

[node name="Sprite2D" type="Sprite2D" parent="Peixe23"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe23"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe23/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe23"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe23"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe24" type="CharacterBody2D" parent="."]
position = Vector2(857, 6383)
script = ExtResource("8_kqtj2")

[node name="Sprite2D" type="Sprite2D" parent="Peixe24"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe24"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe24/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe24"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe24"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe25" type="CharacterBody2D" parent="."]
position = Vector2(561, 6311)
script = ExtResource("8_kqtj2")

[node name="Sprite2D" type="Sprite2D" parent="Peixe25"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe25"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe25/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe25"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe25"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe26" type="CharacterBody2D" parent="."]
position = Vector2(201, 6383)
script = ExtResource("8_kqtj2")

[node name="Sprite2D" type="Sprite2D" parent="Peixe26"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe26"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe26/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe26"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe26"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe27" type="CharacterBody2D" parent="."]
position = Vector2(1121, 6775)
script = ExtResource("8_kqtj2")

[node name="Sprite2D" type="Sprite2D" parent="Peixe27"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe27"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe27/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe27"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe27"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[node name="Peixe28" type="CharacterBody2D" parent="."]
position = Vector2(73, 6735)
script = ExtResource("8_kqtj2")

[node name="Sprite2D" type="Sprite2D" parent="Peixe28"]
position = Vector2(0, -4.17233e-07)
scale = Vector2(1.375, 1.28125)
texture = ExtResource("7_merca")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Peixe28"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peixe28/Area2D"]
position = Vector2(-5.5, -3.5)
shape = SubResource("RectangleShape2D_k8jtg")
metadata/_edit_lock_ = true

[node name="AudioChicote" type="AudioStreamPlayer2D" parent="Peixe28"]
stream = ExtResource("8_2435a")
metadata/_edit_lock_ = true

[node name="AudioBaleia" type="AudioStreamPlayer2D" parent="Peixe28"]
stream = ExtResource("11_73rcm")
metadata/_edit_lock_ = true

[connection signal="body_entered" from="Player2/Area2D2" to="Peixe2" method="_on_area_2d_2_body_entered"]
